# Picturious

./: .gitignore  Cargo.toml  README.md
crates/picturious-core/: Cargo.toml
crates/picturious-core/src/: db.rs  image_ops.rs  lib.rs  manager.rs  models.rs  thumbnails.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
ui/: index.html  main.js  styles.css
